--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adopt Me!</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <!-- emmet abbreviations -->
-     <!-- root:#  -->
+    <!-- root:#  -->
     <div id="root">not rendered</div>
     <!-- script:src -->
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js
-    "></script>   
+    "></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js
     "></script>
     <script src="./App.js">
-        //some code
-        
+      //some code
     </script>
-</body>
+  </body>
 </html>
