--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <!-- root:#  -->
     <div id="root">not rendered</div>
     <!-- script:src -->
-    <script src="https://unpkg.com/react@16.8.4/umd/react.development.js
+    <!-- <script src="https://unpkg.com/react@16.8.4/umd/react.development.js
     "></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js
-    "></script>
+    "></script> -->
     <script src="./App.js">
       //some code
     </script>
